--- a/lab3-1.ipynb
+++ b/lab3-1.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b4fa65b0",
    "metadata": {
     "ExecuteTime": {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "53d221fd",
    "metadata": {
     "ExecuteTime": {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cf165e82",
    "metadata": {
     "ExecuteTime": {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6688fc4e",
    "metadata": {
     "ExecuteTime": {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "18be1d23",
    "metadata": {
     "ExecuteTime": {
@@ -203,17 +203,15 @@
    },
    "outputs": [],
    "source": [
-    "# carne_1 = \n",
-    "# firma_mecanografiada_1 = \n",
-    "# carne_2 = \n",
-    "# firma_mecanografiada_2 = \n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "carne_1 = \"21270\"\n",
+    "firma_mecanografiada_1 = \"Diego Alexander Hernández Silvestre\"\n",
+    "carne_2 = \"21169\"\n",
+    "firma_mecanografiada_2 = \"Linda Inés Jiménez Vides\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8d952cf0",
    "metadata": {
     "ExecuteTime": {
@@ -221,7 +219,40 @@
      "start_time": "2023-08-05T23:29:14.537775Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"0\"}--> \n",
+       "         ✓ [0 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"0\"}--> \n",
+       "         ✓ [0 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Deberia poder ver dos checkmarks verdes [0 marks], que indican que su información básica está OK \n",
     "\n",
@@ -3337,9 +3368,9 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "auto_grader_dl",
+   "display_name": "venv",
    "language": "python",
-   "name": "auto_grader_dl"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3351,7 +3382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.8"
   },
   "toc": {
    "base_numbering": 1,
