--- a/lab3-1.ipynb
+++ b/lab3-1.ipynb
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "dd9c9363",
    "metadata": {
     "ExecuteTime": {
@@ -1123,9 +1123,7 @@
     "    \"\"\"\n",
     "    x_safe = x + 1e-12 #Evitar ceros\n",
     "    # Aprox 1 linea sobre x_safe para implementar la funcion\n",
-    "    # f =\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    f = 1 / (1 + np.exp(-x_safe))\n",
     "    \n",
     "    # Regresa la derivada de la funcion\n",
     "    if derivative: \n",
@@ -1144,9 +1142,7 @@
     "    \"\"\"\n",
     "    x_safe = x + 1e-12 #Evitar ceros\n",
     "    # Aprox 1 linea sobre x_safe para implementar la funcion\n",
-    "    # f =\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    f = (np.exp(x_safe) - np.exp(-x_safe)) / (np.exp(x_safe) + np.exp(-x_safe))\n",
     "    \n",
     "    # Regresa la derivada de la funcion\n",
     "    if derivative: \n",
@@ -1165,9 +1161,7 @@
     "    \"\"\"\n",
     "    x_safe = x + 1e-12 #Evitar ceros\n",
     "    # Aprox 1 linea sobre x_safe para implementar la funcion\n",
-    "    # f =\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    f = np.exp(x_safe) / np.sum(np.exp(x_safe))\n",
     "    \n",
     "    # Regresa la derivada de la funcion\n",
     "    if derivative: \n",
@@ -1179,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "86e6f5b7",
    "metadata": {
     "ExecuteTime": {
@@ -1200,7 +1194,56 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "with tick.marks(5):        \n",
     "    assert check_hash(sigmoid(params[0][0]), ((4,), 6.997641543410888))\n",
