--- a/lab3-1.ipynb
+++ b/lab3-1.ipynb
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "9bb06776",
    "metadata": {
     "ExecuteTime": {
@@ -1322,18 +1322,14 @@
     "        # Calculo del nuevo hidden state usando tanh\n",
     "        # Recuerden que al ser el hidden state tienen que usar los pesos del input multiplicado por el input\n",
     "        #  a esto sumarle los pesos recurrentes por el hidden state y finalmente sumarle b\n",
-    "        # hidden_state =\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        hidden_state = tanh(np.dot(U, inputs[t]) + np.dot(V, hidden_state) + b_hidden)\n",
     "        \n",
     "        # Aprox 1 linea\n",
     "        # para el calculo del output\n",
     "        # Al ser la salida, deben usar softmax sobre la multiplicación de pesos de salida con el hidden_state actual\n",
     "        #   es decir el calculado en el paso anterior y siempre sumarle su bias correspondiente\n",
-    "        # out = \n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
-    "        \n",
+    "        out = softmax(np.dot(W, hidden_state) + b_out) \n",
+    "                \n",
     "        # Guardamos los resultados y continuamos\n",
     "        outputs.append(out)\n",
     "        hidden_states.append(hidden_state.copy())\n",
@@ -1343,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "1c095221",
    "metadata": {
     "ExecuteTime": {
@@ -1364,7 +1360,36 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Secuencia Input:\n",
+      "['a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b']\n",
+      "Secuencia Target:\n",
+      "['a', 'a', 'a', 'a', 'a', 'a', 'a', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'EOS']\n",
+      "Secuencia Predicha:\n",
+      "['a', 'b', 'a', 'a', 'a', 'EOS', 'EOS', 'EOS', 'EOS', 'EOS', 'EOS', 'EOS', 'b', 'b', 'b', 'b']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "test_input_sequence, test_target_sequence = training_set[0]\n",
     "\n",
