📝 feat: Exercise 5, part 1 completed

--- a/lab3-1.ipynb
+++ b/lab3-1.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "id": "b4fa65b0",
    "metadata": {
     "ExecuteTime": {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "id": "53d221fd",
    "metadata": {
     "ExecuteTime": {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "id": "cf165e82",
    "metadata": {
     "ExecuteTime": {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "id": "6688fc4e",
    "metadata": {
     "ExecuteTime": {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "id": "18be1d23",
    "metadata": {
     "ExecuteTime": {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "id": "8d952cf0",
    "metadata": {
     "ExecuteTime": {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
    "id": "6cfc979b",
    "metadata": {
     "ExecuteTime": {
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 57,
    "id": "8940eccd",
    "metadata": {
     "ExecuteTime": {
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 58,
    "id": "8e17b1e6",
    "metadata": {
     "ExecuteTime": {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 59,
    "id": "f2d35905",
    "metadata": {
     "ExecuteTime": {
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 60,
    "id": "a50596f4",
    "metadata": {
     "ExecuteTime": {
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 61,
    "id": "e83d6394",
    "metadata": {
     "ExecuteTime": {
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 62,
    "id": "869c3065",
    "metadata": {
     "ExecuteTime": {
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 63,
    "id": "dd9c9363",
    "metadata": {
     "ExecuteTime": {
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 64,
    "id": "86e6f5b7",
    "metadata": {
     "ExecuteTime": {
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 65,
    "id": "9bb06776",
    "metadata": {
     "ExecuteTime": {
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 66,
    "id": "1c095221",
    "metadata": {
     "ExecuteTime": {
@@ -1447,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "09c404d5",
    "metadata": {
     "ExecuteTime": {
@@ -1524,48 +1524,33 @@
     "        # Aprox 1 linea para calcular la perdida cross-entry (un escalar)\n",
     "        # Hint: Sumen +1e-12 a cada output_t\n",
     "        # Hint2: Recuerden que la perdida es el promedio de multiplicar el logaritmo de los output con los targets\n",
-    "        # loss +=\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
-    "        \n",
+    "        loss += -np.sum(np.log(outputs[t] + 1e-12) * targets[t]) / targets.shape[1]       \n",
     "        \n",
     "        d_o = outputs[t].copy()\n",
     "        # Aprox 1 linea para backpropagate en los output (derivada del cross-entropy)\n",
     "        # Si se sienten perdidos refieran a esta lectura: http://cs231n.github.io/neural-networks-case-study/#grad\n",
-    "        # d_o[...] -=\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        d_o[...] -= targets[t]\n",
     "        \n",
     "        # Aprox 1 lineas para hacer el backpropagation de W\n",
-    "        # d_W += np.dot(...)\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        d_W += np.dot(d_o, hidden_states[t].T)\n",
     "        d_b_out += d_o\n",
     "        \n",
     "        # Aprox 1 linea para hacer el backprop de h\n",
-    "        # d_h = \n",
+    "        d_h = np.dot(W.T, d_o) + d_h_next \n",
     "        # Hint: Probablemente necesiten sacar la transpuesta de W\n",
     "        # Hint2: Recuerden sumar el bias correcto!\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
     "        \n",
     "        # Aprox 1 linea para calcular el backprop en la funcion de activacion tanh\n",
-    "        # d_f = \n",
+    "        d_f = d_h * tanh(hidden_states[t], derivative=True) \n",
     "        # Hint: Recuerden pasar el parametro derivate=True a la funcion que definimos\n",
     "        # Hint2: Deben multiplicar con d_h\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
     "        d_b_hidden += d_f\n",
     "        \n",
     "        # Aprox 1 linea para backprop en U\n",
-    "        # d_U +=\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        d_U += np.dot(d_f, inputs[t].T)\n",
     "        \n",
     "        # Aprox 1 linea para backprop V\n",
-    "        # d_V +=\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        d_V += np.dot(d_f, hidden_states[t-1].T)\n",
     "        d_h_next = np.dot(V.T, d_f)\n",
     "    \n",
     "    # Empaquetar las gradientes\n",
@@ -1579,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "21b7b1d7",
    "metadata": {
     "ExecuteTime": {
@@ -1600,7 +1585,72 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "loss, grads = backward_pass(test_input, outputs, hidden_states, test_target, params)\n",
     "\n",
