📝 feat: Answers to part 1

--- a/lab3-1.ipynb
+++ b/lab3-1.ipynb
@@ -1989,9 +1989,9 @@
     "\n",
     "Ya hemos visto el funcionamiento general de nuestra red RNN, viendo las gráficas de arriba, **responda** lo siguiente dentro de esta celda\n",
     "\n",
-    "* ¿Qué interpretación le da a la separación de las graficas de training y validation?\n",
-    "* ¿Cree que es un buen modelo basado solamente en el loss?\n",
-    "* ¿Cómo deberían de verse esas gráficas en un modelo ideal?"
+    "* ¿Qué interpretación le da a la separación de las graficas de training y validation? La separación podría indicar que el modelo se está ajustando bastante bien a los datos de entrenamiento, (cercania entre la validación y el training), pero no está generalizando bien los datos de validación. Esto podría indicar existencia de overfitting. \n",
+    "* ¿Cree que es un buen modelo basado solamente en el loss? Considerando que la perdida de validación sigue una tendencia decreciente conforme disminuye la perdida de entrenamiento, se podría decir que el rendimiento del modelo es bueno pero podría mejorarse ya que la existencia de un posible overfitting se podría intentar reducir con ciertas técnicas para evitar este problema. \n",
+    "* ¿Cómo deberían de verse esas gráficas en un modelo ideal? En un modelo ideal, ambas tendencias deberían converger a valores similares a medida que aumentan las epocas."
    ]
   },
   {
