📝 feat: Exercise 1, part 2 complete

--- a/lab3-1.ipynb
+++ b/lab3-1.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "id": "b4fa65b0",
    "metadata": {
     "ExecuteTime": {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "id": "53d221fd",
    "metadata": {
     "ExecuteTime": {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "id": "cf165e82",
    "metadata": {
     "ExecuteTime": {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "id": "6688fc4e",
    "metadata": {
     "ExecuteTime": {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "id": "18be1d23",
    "metadata": {
     "ExecuteTime": {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "id": "8d952cf0",
    "metadata": {
     "ExecuteTime": {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "id": "6cfc979b",
    "metadata": {
     "ExecuteTime": {
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "id": "8940eccd",
    "metadata": {
     "ExecuteTime": {
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "id": "8e17b1e6",
    "metadata": {
     "ExecuteTime": {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "id": "f2d35905",
    "metadata": {
     "ExecuteTime": {
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "id": "a50596f4",
    "metadata": {
     "ExecuteTime": {
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "id": "e83d6394",
    "metadata": {
     "ExecuteTime": {
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "id": "869c3065",
    "metadata": {
     "ExecuteTime": {
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "id": "dd9c9363",
    "metadata": {
     "ExecuteTime": {
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
    "id": "86e6f5b7",
    "metadata": {
     "ExecuteTime": {
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "id": "9bb06776",
    "metadata": {
     "ExecuteTime": {
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 17,
    "id": "1c095221",
    "metadata": {
     "ExecuteTime": {
@@ -1447,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "id": "09c404d5",
    "metadata": {
     "ExecuteTime": {
@@ -1564,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 19,
    "id": "21b7b1d7",
    "metadata": {
     "ExecuteTime": {
@@ -1699,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 20,
    "id": "7d0649f4",
    "metadata": {
     "ExecuteTime": {
@@ -1755,7 +1755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 21,
    "id": "1db77ee0",
    "metadata": {
     "ExecuteTime": {
@@ -1878,7 +1878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 22,
    "id": "37307e6b",
    "metadata": {
     "ExecuteTime": {
@@ -2061,7 +2061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "a2c856b9",
    "metadata": {
     "ExecuteTime": {
@@ -2100,40 +2100,34 @@
     "\n",
     "    # Aprox 1 linea para empezar la matriz de pesos de la forget gate\n",
     "    # Recuerden que esta debe empezar con numeros aleatorios\n",
-    "    # W_f = np.random.randn\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    \n",
+    "    W_f = np.random.randn(hidden_size, z_size)\n",
+    "\n",
     "    # Bias del forget gate\n",
     "    b_f = np.zeros((hidden_size, 1))\n",
     "\n",
     "    # Aprox 1 linea para empezar la matriz de pesos de la input gate\n",
     "    # Recuerden que esta debe empezar con numeros aleatorios\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    W_i = np.random.randn(hidden_size, z_size)\n",
     "    \n",
     "    # Bias para input gate\n",
     "    b_i = np.zeros((hidden_size, 1))\n",
     "\n",
     "    # Aprox 1 linea para empezar la matriz de pesos para la memoria candidata\n",
     "    # Recuerden que esta debe empezar con numeros aleatorios\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    W_g = np.random.randn(hidden_size, z_size)\n",
     "    \n",
     "    # Bias para la memoria candidata\n",
     "    b_g = np.zeros((hidden_size, 1))\n",
     "\n",
     "    # Aprox 1 linea para empezar la matriz de pesos para la output gate\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    W_o = np.random.randn(hidden_size, z_size)\n",
     "    \n",
     "    # Bias para la output gate\n",
     "    b_o = np.zeros((hidden_size, 1))\n",
     "\n",
     "\n",
     "    # Aprox 1 linea para empezar la matriz que relaciona el hidden state con el output\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    W_v = np.random.randn(vocab_size, hidden_size)\n",
     "    \n",
     "    # Bias\n",
     "    b_v = np.zeros((vocab_size, 1))\n",
@@ -2152,7 +2146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "412a27b5",
    "metadata": {
     "ExecuteTime": {
@@ -2173,7 +2167,88 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "with tick.marks(5):        \n",
     "    assert check_hash(params[0], ((50, 54), -28071.583543573637))\n",
