--- a/lab3-1.ipynb
+++ b/lab3-1.ipynb
@@ -2291,7 +2291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "8a59a4dc",
    "metadata": {
     "ExecuteTime": {
@@ -2353,16 +2353,12 @@
     "    for x in inputs:\n",
     "\n",
     "        # Aprox 1 linea para concatenar el input y el hidden state\n",
-    "        # z = np.row.stack(...)\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        z = np.row_stack((h_prev, x)) \n",
     "        z_s.append(z)\n",
     "        \n",
     "        # Aprox 1 linea para calcular el forget gate\n",
     "        # Hint: recuerde usar sigmoid\n",
-    "        # f = \n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        f = sigmoid(np.dot(W_f, z) + b_f) \n",
     "        f_s.append(f)\n",
     "        \n",
     "        # Calculo del input gate\n",
@@ -2374,23 +2370,17 @@
     "        g_s.append(g)\n",
     "        \n",
     "        # Aprox 1 linea para calcular el estado de la memoria\n",
-    "        # C_prev = \n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        C_prev = f * C_prev + i * g\n",
     "        C_s.append(C_prev)\n",
     "        \n",
     "        # Aprox 1 linea para el calculo de la output gate\n",
     "        # Hint: recuerde usar sigmoid\n",
-    "        # o = \n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        o = sigmoid(np.dot(W_o, z) + b_o) \n",
     "        o_s.append(o)\n",
     "        \n",
     "        # Calculate hidden state\n",
     "        # Aprox 1 linea para el calculo del hidden state\n",
-    "        # h_prev =\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        h_prev = o * tanh(C_prev)\n",
     "        h_s.append(h_prev)\n",
     "\n",
     "        # Calcular logits\n",
@@ -2406,7 +2396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "71f758df",
    "metadata": {
     "ExecuteTime": {
@@ -2427,7 +2417,36 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Secuencia Input:\n",
+      "['a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b']\n",
+      "Secuencia Target:\n",
+      "['a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'EOS']\n",
+      "Secuencia Predicha:\n",
+      "['b', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'EOS', 'EOS', 'EOS', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Obtener la primera secuencia para probar\n",
     "inputs, targets = test_set[1]\n",
