📚 feat: Backward, part 2 complete

--- a/lab3-1.ipynb
+++ b/lab3-1.ipynb
@@ -1779,26 +1779,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoca 0, training loss: 4.05046509496538, validation loss: 4.801971835967156\n",
-      "Epoca 100, training loss: 2.7298340765749445, validation loss: 3.2320576163982673\n",
-      "Epoca 200, training loss: 2.109414655736732, validation loss: 2.4980526328844146\n",
-      "Epoca 300, training loss: 1.8235746981413405, validation loss: 2.198677070984531\n",
-      "Epoca 400, training loss: 1.6884087861997366, validation loss: 2.077078608023496\n",
-      "Epoca 500, training loss: 1.6129170568126507, validation loss: 2.0163543941716577\n",
-      "Epoca 600, training loss: 1.5624028954062004, validation loss: 1.9780311638492243\n",
-      "Epoca 700, training loss: 1.523501919791708, validation loss: 1.9496130467843358\n",
-      "Epoca 800, training loss: 1.4895828031292169, validation loss: 1.9248315278145824\n",
-      "Epoca 900, training loss: 1.4558865884071512, validation loss: 1.8978220912154355\n",
-      "Epoca 1000, training loss: 1.4173709332614923, validation loss: 1.860079817655523\n",
-      "Epoca 1100, training loss: 1.3681783634403943, validation loss: 1.799369702641399\n",
-      "Epoca 1200, training loss: 1.3051122158818889, validation loss: 1.7081695076503571\n",
-      "Epoca 1300, training loss: 1.2330985128125032, validation loss: 1.5999314734390082\n",
-      "Epoca 1400, training loss: 1.1619900522538607, validation loss: 1.499857760238673\n",
-      "Epoca 1500, training loss: 1.1035554777966454, validation loss: 1.428263841611044\n",
-      "Epoca 1600, training loss: 1.068063341628424, validation loss: 1.3958745915871196\n",
-      "Epoca 1700, training loss: 1.0550402179563658, validation loss: 1.396367448175595\n",
-      "Epoca 1800, training loss: 1.0570111001893736, validation loss: 1.4185760443851865\n",
-      "Epoca 1900, training loss: 1.0640880623573372, validation loss: 1.4524183517051117\n"
+      "Epoca 0, training loss: 4.0504650949653795, validation loss: 4.801971835967156\n",
+      "Epoca 100, training loss: 2.729834076574944, validation loss: 3.2320576163982673\n",
+      "Epoca 200, training loss: 2.1094146557367317, validation loss: 2.498052632884415\n",
+      "Epoca 300, training loss: 1.823574698141341, validation loss: 2.198677070984531\n",
+      "Epoca 400, training loss: 1.6884087861997368, validation loss: 2.0770786080234966\n",
+      "Epoca 500, training loss: 1.6129170568126512, validation loss: 2.0163543941716586\n",
+      "Epoca 600, training loss: 1.5624028954062008, validation loss: 1.9780311638492247\n",
+      "Epoca 700, training loss: 1.5235019197917081, validation loss: 1.9496130467843362\n",
+      "Epoca 800, training loss: 1.4895828031292173, validation loss: 1.924831527814583\n",
+      "Epoca 900, training loss: 1.4558865884071523, validation loss: 1.897822091215437\n",
+      "Epoca 1000, training loss: 1.4173709332614934, validation loss: 1.8600798176555244\n",
+      "Epoca 1100, training loss: 1.3681783634403955, validation loss: 1.7993697026414004\n",
+      "Epoca 1200, training loss: 1.3051122158818909, validation loss: 1.708169507650359\n",
+      "Epoca 1300, training loss: 1.2330985128125054, validation loss: 1.59993147343901\n",
+      "Epoca 1400, training loss: 1.1619900522538618, validation loss: 1.4998577602386736\n",
+      "Epoca 1500, training loss: 1.1035554777966463, validation loss: 1.4282638416110447\n",
+      "Epoca 1600, training loss: 1.0680633416284244, validation loss: 1.3958745915871191\n",
+      "Epoca 1700, training loss: 1.0550402179563654, validation loss: 1.3963674481755934\n",
+      "Epoca 1800, training loss: 1.057011100189373, validation loss: 1.4185760443851851\n",
+      "Epoca 1900, training loss: 1.0640880623573363, validation loss: 1.4524183517051097\n"
      ]
     }
    ],
@@ -2503,7 +2503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 51,
    "id": "a753b92e",
    "metadata": {
     "ExecuteTime": {
@@ -2583,10 +2583,7 @@
     "    for t in reversed(range(len(outputs))):\n",
     "        \n",
     "        # Aprox 1 linea para calcular la perdida con cross entropy\n",
-    "        # loss += ...\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
-    "        \n",
+    "        loss += -np.sum(np.log(outputs[t] + 1e-12) * targets[t]) / targets.shape[1]  \n",
     "        # Obtener el hidden state del estado previo\n",
     "        C_prev= C[t-1]\n",
     "        \n",
@@ -2596,9 +2593,7 @@
     "        dv[np.argmax(targets[t])] -= 1\n",
     "\n",
     "        # Aprox 1 linea para actualizar la gradiente de la relacion del hidden-state al output gate\n",
-    "        # W_v_d += \n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        W_v_d += np.dot(dv, h[t].T)\n",
     "        b_v_d += dv\n",
     "\n",
     "        # Calculo de la derivada del hidden state y el output gate\n",
@@ -2606,10 +2601,8 @@
     "        dh += dh_next\n",
     "        do = dh * tanh(C[t])\n",
     "        # Aprox 1 linea para calcular la derivada del output\n",
-    "        # do = ..\n",
+    "        do = sigmoid(o[t], True) * do\n",
     "        # Hint: Recuerde multiplicar por el valor previo de do (el de arriba)\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
     "        \n",
     "        # Actualizacion de las gradientes con respecto al output gate\n",
     "        W_o_d += np.dot(do, z[t].T)\n",
@@ -2620,8 +2613,7 @@
     "        dC += dh * o[t] * tanh(tanh(C[t]), derivative=True)\n",
     "        dg = dC * i[t]\n",
     "        # Aprox 1 linea de codigo para terminar el calculo de dg\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        dg = tanh(g[t], True) * dg\n",
     "        \n",
     "        # Actualización de las gradientes con respecto de la mem candidata\n",
     "        W_g_d += np.dot(dg, z[t].T)\n",
@@ -2632,19 +2624,15 @@
     "        di = dC * g[t]\n",
     "        di = sigmoid(i[t], True) * di\n",
     "        # Aprox 2 lineas para el calculo de los pesos y bias del input gate\n",
-    "        # W_i_d += \n",
-    "        # b_i_d +=\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        W_i_d += np.dot(di, z[t].T)\n",
+    "        b_i_d += di\n",
     "\n",
     "        # Calculo de las derivadas del forget gate y actualización de sus gradientes\n",
     "        df = dC * C_prev\n",
     "        df = sigmoid(f[t]) * df\n",
     "        # Aprox 2 lineas para el calculo de los pesos y bias de la forget gate\n",
-    "        # W_f_d += \n",
-    "        # b_f_d +=\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        W_f_d += np.dot(df, z[t].T) \n",
+    "        b_f_d += df\n",
     "\n",
     "        # Calculo de las derivadas del input y la actualizacion de gradientes del hidden state previo\n",
     "        dz = (np.dot(W_f.T, df)\n",
@@ -2664,7 +2652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "58def9bc",
    "metadata": {
     "ExecuteTime": {
@@ -2685,7 +2673,31 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Perdida obtenida:7.637217940741176\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Realizamos un backward pass para probar\n",
     "loss, grads = backward(z_s, f_s, i_s, g_s, C_s, o_s, h_s, v_s, outputs, targets_one_hot, params)\n",
@@ -3943,7 +3955,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.8"
   },
   "toc": {
    "base_numbering": 1,
